# car-system-agentic-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.ideconfig/: settings.example.json
data/: agent_cards.json
docker/: Dockerfile
docs/: api-documentation.md  environment-variables.md  how-to-run.md  installation-guide.md  using-notebooks.md
notebooks/: __init__.py  graph_execution.ipynb  setup.py  template.ipynb
src/: __init__.py
src/app/: main.py
src/app/routers/: chat_router.py
src/app/schemas/: app_dto.py
src/data_models/: agent_card.py  graph_state.py  structured_outputs.py
src/graphs/: factory.py
src/models/: __init__.py  gemini.py
src/models/base/: __init__.py  _chat_model.py
src/nodes/: __init__.py  agentic_node.py  error_handler.py  input_guard_rail.py  node_with_tools.py  output_guard_rail.py  reasoning_node.py
src/nodes/base/: __init__.py  _node.py  _node_with_tools.py
src/prompts/: agentic_node.md  car_central.md  error_handler.md  input_guard_rail.md  output_guard_rail.md  reasoning_node.md  trip_planner.md
src/services/: __init__.py  agent_registry.py
src/services/car/: __init__.py
src/tools/: agent_registry.py  calculations.py  car.py  registry_interaction.py  travel.py  weather.py
src/utils/: __init__.py  agent_card_loader.py  agent_initializer.py  logger.py  prompt_loader.py  stream.py  test_graph.py
